# aptos-core

./: .gitignore  Cargo.toml
.github/workflows/: module-verify-mainnet.yaml  module-verify-testnet.yaml  replay-verify-mainnet.yaml  replay-verify-testnet.yaml
aptos-move/aptos-release-builder/src/components/: mod.rs
aptos-move/aptos-vm/: Cargo.toml
aptos-move/aptos-vm/src/: adapter_common.rs  aptos_vm.rs  aptos_vm_impl.rs  counters.rs  errors.rs
aptos-move/aptos-vm/src/block_executor/: mod.rs  vm_wrapper.rs
aptos-move/block-executor/: Cargo.toml
aptos-move/block-executor/src/: executor.rs  view.rs
aptos-move/buffered-logger/: Cargo.toml
aptos-move/buffered-logger/src/: counters.rs  lib.rs
aptos-move/e2e-testsuite/: Cargo.toml
aptos-move/e2e-testsuite/src/tests/: failed_transaction_tests.rs
consensus/src/: counters.rs  pending_votes.rs
crates/aptos-telemetry-service/src/: auth.rs  log_ingest.rs  prometheus_push_metrics.rs
crates/aptos-telemetry-service/src/tests/: auth_test.rs  custom_event.rs
crates/aptos-telemetry-service/src/types/: mod.rs
crates/aptos-telemetry/src/: sender.rs
crates/aptos/src/update/: helpers.rs
dashboards/: overview.json
execution/executor-types/src/: lib.rs  parsed_transaction_output.rs
execution/executor/src/: chunk_executor.rs
execution/executor/src/tests/: mod.rs
storage/aptosdb/src/: lib.rs
storage/aptosdb/src/pruner/state_store/: mod.rs
testsuite/: module_verify.py  replay_verify.py
testsuite/forge-cli/src/: main.rs
testsuite/verify_core/: common.py
types/src/transaction/: mod.rs
(+4 files in other folders)
